--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <title>bio</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <h1>bio</h1>
