--- a/bio.html
+++ b/bio.html
@@ -11,6 +11,17 @@
     <title>| Bio</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
+  <header>
+    <p class="header-main">
+      Ross Goodliffe.
+    </p>
+    <p class="header-text">
+      <a href="index.html">home</a>
+      <a href="cv.html">cv</a>
+      bio
+      <a href="contact.html">contact</a>
+    </p>
+  </header>
   <body>
     <h1>bio</h1>
 
