--- a/bio.html
+++ b/bio.html
@@ -26,4 +26,17 @@
     <h1>bio</h1>
 
   </body>
+  <!-- Footer containing ???? -->
+  <footer>
+    <ul class ="footer-logos">
+      <!--Links are only to the sites mainpage as didn't want to link to my personal
+      pages at this point in time. -->
+      <li>Get in touch!</li>
+      <li><a href="https://www.facebook.com"><img src="images/fb-logo.png" height="32" width="32" /> Facebook</a></li>
+      <li><a href="https://twitter.com/"><img src="images/twitter-logo.png" height="32" width="32" /> Twitter</a></li>
+      <li><a href="https://www.linkedin.com/"><img src="images/linkedin-logo.png" height="32" width="32" /> Linked In</a></li>
+      <li><a href="https://github.com/"><img src="images/github-logo3.png" height="32" width="32" /> GitHub</a></li>
+    </ul>
+  </footer>
+  <!-- End of Footer -->
 </html>
