--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet" text="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <title>| Bio</title>
+    <title>| Ross Goodliffe | Bio</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <header>
@@ -23,10 +23,23 @@
     </p>
   </header>
   <body>
-    <h1>bio</h1>
+    <h1 class="bio-head">About Ross</h1>
+      <p class="bio-body">
+        Ross is a problem solver and enjoys solving any problems from errors in code to Sudoku puzzles and is always eager to learn new things.
+        He loves taking things apart to put them back together, sometimes more successfully than others, and is fascinated by the World Wide Web.
+        Currently studying Computing (Web Technology and Security) at the University of Northampton situated in Northampton, UK.
+        <br  />
+        <br  />
+        He would like to be involved in IT security once he has completed his degree at Northampton as he believes this is the most
+        interesting part of the computing industry today and is something he is very passionate to learn more about.
+        <br  />
+        <br  />
+        However, his interests are not limited to just computers he also plays multiple musical instruments, gaming, enjoys reading books and traveling the world.
+
+      </p>
 
   </body>
-  <!-- Footer containing ???? -->
+  <!-- Footer containing links to either social media or networking accounts -->
   <footer>
     <ul class ="footer-logos">
       <!--Links are only to the sites mainpage as didn't want to link to my personal
