--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet" text="text/css" />
+    <link href="css/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <title>| Ross Goodliffe | Bio</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
